modifying modern-resume-theme to allow for images next to an entry. only done for left.html but will add to all others later. also added logic for modal popup when clicking on the image.

--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -1,4 +1,6 @@
 - layout: left
+  img: Backdraft.png
+  img-caption: Backdraft Editor View
   name: Backdraft Engine
 #  link: Link to project (eg. sproogen.github.io/modern-resume-theme)(optional)
   github: https://github.com/ryanbbernstein/BACKDRAFT
